# restapi

./: pyproject.toml
example/: get.py  get_2.py  post.py
stripe-rest-api/: app.py  config.py  create_pdf_tables.sql  customer_service.py  database.py  logger.py  menu.py  payment_service.py  post_musteri_ekleme.py  product_service.py  pyproject.toml  requirements.txt  run_api.py  run_cli.py  stripe_client.py  test_db_connection.py  test_payment.py  test_price.py  test_product.py  utils.py  web_api.py
stripe-rest-api/api/: web_api.py
stripe-rest-api/api/routes/: auth_routes.py  main_routes.py
stripe-rest-api/api/routes/admin/: customers.py  data_ops.py  files.py  invoices.py  (+3 more)
stripe-rest-api/api/templates/: index.html
stripe-rest-api/cli/: menu.py
stripe-rest-api/core/: config.py  database.py  logger.py  mongo_log_handler.py  stripe_client.py  utils.py
stripe-rest-api/data/csv/: customers.csv  customers1.csv
stripe-rest-api/data/json/: customers.json  customers1.json
stripe-rest-api/scripts/: create_users_table.py  migrate_pdfs_to_tidb.py  run_import.py
stripe-rest-api/services/: bulk_import_service.py  customer_service.py  export_service.py  file_service.py  import_service.py  invoice_service.py  pandas_import_service.py  payment_service.py  pdf_service.py  product_service.py  refund_service.py
stripe-rest-api/static/css/: style.css
stripe-rest-api/static/js/: dashboard.js
stripe-rest-api/templates/: index.html
stripe-rest-api/tests/: test_auth_flow.py  test_db_connection.py  test_payment.py  test_pdf_view.py  test_price.py  test_product.py
(+6 files in other folders)
